k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-platform-service

spec:
  selector:
    app: devops-platform

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
