k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-platform-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: devops-platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-platform-service
                port:
                  number: 80
